fix: add z-index to drawer head to prevent blocking tooltips

--- a/express/code/blocks/print-product-detail/print-product-detail.css
+++ b/express/code/blocks/print-product-detail/print-product-detail.css
@@ -949,6 +949,7 @@ main .section .pdpx-drawer-description {
   display: flex;
   position: sticky;
   top: 0;
+  z-index: 1;
   justify-content: space-between;
   border-radius: 16px 16px 0 0;
   border-bottom: 1px solid var(--color-gray-325);
